Geolocation API does not work in WKWebView with custom URL scheme handler https://bugs.webkit.org/show_bug.cgi?id=222861 Source/WebCore:

<rdar://problem/75394695>

Reviewed by Eric Carlson.

Covered by API tests.

* Modules/geolocation/Geolocation.cpp:
(WebCore::Geolocation::shouldBlockGeolocationRequests):
Use Document::isSecureContext to validate whether the document is secure.
This is consistent with other APIs.

Source/WebKit:

<rdar://problem/75394695>

Reviewed by Eric Carlson.

Update geolocation prompt origin to match getUserMedia and show the app name instead of custom scheme origin.

* UIProcess/Cocoa/MediaPermissionUtilities.mm:
(WebKit::alertMessageText):

Tools:

<rdar://problem/75394695>

Reviewed by Eric Carlson.

* TestWebKitAPI/Tests/WebKitCocoa/UIDelegate.mm:
(-[GeolocationDelegate setValidationHandler:]):
(-[GeolocationDelegate _webView:requestGeolocationPermissionForFrame:decisionHandler:]):
(TEST):

LayoutTests:

Reviewed by Eric Carlson.

* TestExpectations: Skip WPT test that is using localhost so is actually secure.
Validated that behavior is consistent with Chrome and Firefox.
* http/tests/security/resources/geolocation-over-insecure-content.html:
Use internals API to mimick insecure context.


Canonical link: https://commits.webkit.org/235459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274622 268f45cc-cd09-0410-ab3c-d52691b4dbfc